[gd_scene load_steps=22 format=2]

[ext_resource path="res://Levels/World.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/playerKinematic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera/ForwardLookingCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera/HeadCamCollider.gd" type="Script" id=5]
[ext_resource path="res://Camera/CamCollider.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/ParallaxBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level.gd" type="Script" id=8]
[ext_resource path="res://Tileset/Tileset_Bryan.tres" type="TileSet" id=9]
[ext_resource path="res://Enviroment/Speedboost/Speedboost.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enviroment/Datastrings/Lasers.gd" type="Script" id=11]
[ext_resource path="res://Enviroment/Datastrings/LaserOrange.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enviroment/Datastrings/LaserPurple.tscn" type="PackedScene" id=13]
[ext_resource path="res://Enviroment/Collectibles/Collectible.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enviroment/FinishLine/FinishArea.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/UI.gd" type="Script" id=16]
[ext_resource path="res://Scenes/Pause Menu/PauseMenu.tscn" type="PackedScene" id=17]
[ext_resource path="res://UI/color indicator/ColorIndicator.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/Fullspeed Mode/FullspeedMode.tscn" type="PackedScene" id=19]
[ext_resource path="res://UI/Collectibles/CollectiblesCollected.tscn" type="PackedScene" id=20]
[ext_resource path="res://UI/Timer/Timer.tscn" type="PackedScene" id=21]

[node name="Level" type="Node"]

script = ExtResource( 1 )

[node name="Player" type="Node" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 2 )

[node name="player" parent="Player" index="0" instance=ExtResource( 3 )]

[node name="ForwardLookingCamera" parent="Player" index="1" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]

[node name="HeadCamCollider" type="Node2D" parent="Player/ForwardLookingCamera" index="2"]

editor/display_folded = true
script = ExtResource( 5 )
FIXED_CAMERA = false
CURRENT_ANCHOR = 0

[node name="CamCollider" parent="Player/ForwardLookingCamera/HeadCamCollider" index="0" instance=ExtResource( 6 )]

position = Vector2( 1338.48, -186.5 )
collision_layer = 0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
FIXED_CAMERA = false

[node name="CamCollider2" parent="Player/ForwardLookingCamera/HeadCamCollider" index="1" instance=ExtResource( 6 )]

position = Vector2( 1622.46, 330.647 )
scale = Vector2( 1.29804, 1 )
collision_layer = 0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="ParallaxBackground" parent="Player" index="2" instance=ExtResource( 7 )]

[node name="Level" type="Node" parent="." index="1"]

script = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="Level" index="0"]

position = Vector2( 482.445, 186.753 )
scale = Vector2( 0.5, 0.5 )
mode = 0
tile_set = ExtResource( 9 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 4
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell", "Collision", "Material", "Pause", "Transform", "Visibility" ]

[node name="Speedboosters" type="Node2D" parent="Level" index="1"]

[node name="Speedboost" parent="Level/Speedboosters" index="0" instance=ExtResource( 10 )]

position = Vector2( 1614.02, -775.772 )
LENGTH = 10.0

[node name="Lasers" type="Node2D" parent="Level" index="2"]

editor/display_folded = true
position = Vector2( 2308.56, -1213.31 )
script = ExtResource( 11 )

[node name="LaserOrange" parent="Level/Lasers" index="0" instance=ExtResource( 12 )]

position = Vector2( 381.223, 501.512 )

[node name="LaserBlau" parent="Level/Lasers" index="1" instance=ExtResource( 13 )]

position = Vector2( 66.6215, 488.558 )

[node name="Collectibles" type="Node2D" parent="Level" index="3"]

editor/display_folded = true
position = Vector2( 231.613, -934.005 )

[node name="Collectible" parent="Level/Collectibles" index="0" instance=ExtResource( 14 )]

position = Vector2( 1200.44, 107.52 )
scale = Vector2( 0.0348979, 0.0470226 )

[node name="FinishArea" parent="Level" index="4" instance=ExtResource( 15 )]

visible = false
position = Vector2( 3805.09, 77.8135 )

[node name="UI" type="Node" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 16 )

[node name="PauseMenu" parent="UI" index="0" instance=ExtResource( 17 )]

[node name="ColorIndicator" parent="UI" index="1" instance=ExtResource( 18 )]

[node name="FullspeedMode" parent="UI" index="2" instance=ExtResource( 19 )]

[node name="CollectiblesCollected" parent="UI" index="3" instance=ExtResource( 20 )]

COLLECTIBLES_IN_THIS_LEVEL = 1

[node name="Timer" parent="UI" index="4" instance=ExtResource( 21 )]

[connection signal="is_at_fullspeed" from="Player/player" to="." method="_on_player_is_at_fullspeed"]

[connection signal="is_not_at_fullspeed" from="Player/player" to="." method="_on_player_is_not_at_fullspeed"]

[connection signal="switched_color_to_orange" from="Player/player" to="." method="_on_player_switched_color_to_orange"]

[connection signal="switched_color_to_purple" from="Player/player" to="." method="_on_player_switched_color_to_purple"]

[connection signal="new_camera" from="Player/ForwardLookingCamera/HeadCamCollider/CamCollider" to="Player/ForwardLookingCamera/HeadCamCollider" method="_on_CamCollider_new_camera"]

[connection signal="new_camera" from="Player/ForwardLookingCamera/HeadCamCollider/CamCollider2" to="Player/ForwardLookingCamera/HeadCamCollider" method="_on_CamCollider_new_camera"]

[connection signal="speedboost_start" from="Level/Speedboosters/Speedboost" to="." method="_on_Speedboost_speedboost_start"]

[connection signal="speedboost_stop" from="Level/Speedboosters/Speedboost" to="." method="_on_Speedboost_speedboost_stop"]

[connection signal="collected" from="Level/Collectibles/Collectible" to="." method="_on_Collectible_collected"]

[connection signal="finish_line_passed" from="Level/FinishArea" to="." method="_on_FinishArea_finish_line_passed"]


